<resources>
    <string name="app_name">geoquiz</string>
    <string name="question_india">1)Delhi is the capital of india</string>
    <string name="question_oceans">2)The Pacific Ocean is
larger than
the Atlantic Ocean.</string>
    <string name="question_mideast">3)The Suez Canal
connects the Red Sea
and the Indian Ocean.</string>
    <string name="question_africa">4)The source of the Nile
River is in Egypt.</string>
    <string name="question_americas">5)The Amazon River is
the longest river
in the Americas.</string>
    <string name="question_asia">6)Lake Baikal is the
world\'s oldest and deepest
freshwater lake.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="que_toast">Qusetion alreay answered</string>
    <string name="result_toast">Correct answeres :</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="warning_toast">Are you sure to see the answer?</string>
    <string name="cheat_button">Cheat</string>
    <string name="show_answer">Show answer</string>
    <string name="judge_toast">Cheating is wrong.</string>
    <string name="cheat_count_toast">No more cheats remaining</string>
</resources>
